# prism-sp1-example

./: Cargo.toml
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
