[package]
version = "0.1.0"
name = "prism-program"
edition = "2021"

[dependencies]
sp1-zkvm = "3.0.0-rc1"
prism-common = { git = "https://github.com/deltadevsde/prism", package = "prism-common" }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
