[package]
version = "0.1.0"
name = "prism-script"
edition = "2021"
default-run = "prism"

[[bin]]
name = "prism"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "3.0.0-rc1", features = ["cuda"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
prism-common = { git = "https://github.com/deltadevsde/prism", package = "crates/common", features = [
    "test_utils",
] }
jmt = { git = "https://github.com/deltadevsde/jmt", branch = "rehashing-circuit", features = [
    "mocks",
] }
rand = "0.8.5"
ed25519-dalek = "2.1.1"
keystore-rs = "0.1.0"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", branch = "patch-curve25519-v4.1.3", package = "ed25519-dalek" }
